# pytimer

./: .gitignore  .myenv  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
config/: project.py  python.py  version.py
pytimer/: pytimer.py  static.py  version.py
